# auto-cloud-gi

./: .env.example  .gitignore  README.md  auto-cloud-GI.bat  auto-cloud-GI.bat - 快捷方式.lnk  auto-cloud-gi-task.xml  bgi_ai_summary.ps1  change_btgi_window.ahk  config_example.ini  enter_genshin_queue.ahk  enter_genshin_queue_nowait.ahk  enter_genshin_queue_usingquick.ahk  et --soft HEAD~1  get_kongyue.ahk  load_config.ahk  pyproject.toml  requirements.txt  screen_sampler.ps1  send_wecom_log.bat  upload_quark.bat  wait_until_enter.ahk
ahk/: change_btgi_window.ahk  enter_door.ahk  enter_genshin_queue.ahk  enter_genshin_queue_nowait.ahk  enter_genshin_queue_usingquick.ahk  get_kongyue.ahk  handle_btgi_update.ahk  load_config.ahk  upload_quark.ahk  wait_until_enter.ahk
docs/: rebuild-blueprint.md  rebuild-mapping.md  rebuild-todo.md
scripts/: .dev.env.example  check_runtime_deps.py  dev.sh  ocr_probe_start_game.py  remote_ctl.py  smoke_run.py
tests/: test_action_dispatcher.py  test_actions.py  test_authoring.py  test_blackboard.py  test_blackboard_controller.py  test_controller_router.py  test_diagnostics.py  test_genshin_pc_profile.py  test_local_command_adapter.py  test_log_manager.py  test_log_watch.py  test_new_profiles.py  test_orchestrator.py  test_orchestrator_profiles.py  test_process_registry.py  test_profile_mapping.py  test_python_native_game_runtime_text.py  test_recovery_strategy.py  test_remote_system_endpoint.py  test_resource_arbiter.py  test_run_executor.py  test_run_replay.py  test_runtime_factory.py  test_scenario.py  test_state_driven_kernel.py  (+7 more)
(+134 files in other folders)
