[project]
name = "auto-cloud-gi-kernel"
version = "0.1.0"
description = "Kernel-first refactor for auto-cloud-gi"
requires-python = ">=3.10"
dependencies = [
  "pyautogui>=0.9.54",
  "pytesseract>=0.3.10",
  "paddleocr>=2.8.1",
  "paddlepaddle>=2.6.1",
]

[project.scripts]
acgi-control-api = "src.app.bootstrap:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
